Tidy up various optimisation attempts in notebook 04

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -42,7 +42,10 @@
    "outputs": [],
    "source": [
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
-    "    \"\"\"The other epidemiological aspects of the model.\n",
+    "    \"\"\"The common features of the model.\n",
+    "    Get the generation time distribution from the user request,\n",
+    "    linearly interpolate the non-mechanistic process,\n",
+    "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
@@ -51,11 +54,15 @@
     "    return model_result, process_vals_exp\n",
     "\n",
     "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "    \"\"\"Only optimise the non-mechanistic process parameters,\n",
+    "    least squares loss function.\n",
+    "    \"\"\"\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
     "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
     "\n",
     "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "    \"\"\"Get the loss function from the model.\n",
+    "    \"\"\"Additionally include the generation time parameters as parameters,\n",
+    "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
@@ -100,7 +107,7 @@
    "source": [
     "### Local optimisation with process values only\n",
     "Optimisation algorithm applied to arbitrary dummy data.\n",
-    "It works for this simple case, but quickly breaks down for more complex data."
+    "It works for this simple case, but quickly breaks down in many other use cases."
    ]
   },
   {
@@ -126,7 +133,8 @@
     "tags": []
    },
    "source": [
-    "### Local optimisation including the generation time-related parameters"
+    "### Local optimisation including the generation time-related parameters\n",
+    "As for previous analysis, but including generation time parameters in local optimisation."
    ]
   },
   {
@@ -150,7 +158,9 @@
    "source": [
     "### Calibrate to outputs produced by model\n",
     "Check that the optimisation algorithm can recover\n",
-    "the parameters used in generating some arbitrary data."
+    "the parameters used in generating some arbitrary data.\n",
+    "This actually worked better (closer fit to data)\n",
+    "when using the raw process values rather than their logs."
    ]
   },
   {
@@ -203,12 +213,34 @@
     "def obj_func(parameters):\n",
     "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
-    "ng_result = optimizer.minimize(obj_func)\n",
-    "model_result, process_vals = model_func(ng_result.value[0], ng_result.value[1], ng_result.value[2:], 1e2, 1.0, len(test_vals))\n",
-    "optimised, suscept, r_t = model_result\n",
+    "ngopt_result = optimizer.minimize(obj_func)\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], 1e2, 1.0, len(test_vals))\n",
     "print(test_process)\n",
-    "print(np.exp(ng_result.value[2:]))\n",
-    "plot_output_fit(test_vals, model_result, process_vals, n_times)"
+    "print(np.exp(ngopt_result.value[2:]))\n",
+    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47d4de3b-495c-4d15-99df-c22f9ad70beb",
+   "metadata": {},
+   "source": [
+    "Doesn't work quite as well with `TwoPointsDE`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea83253d-9a37-4165-a58e-613bd64be8c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = ng.optimizers.TwoPointsDE(parametrization=6, budget=10000)\n",
+    "tpde_result = optimizer.minimize(obj_func)\n",
+    "tpde_output, tpde_process = model_func(tpde_result.value[0], tpde_result.value[1], tpde_result.value[2:], 1e2, 1.0, len(test_vals))\n",
+    "print(test_process)\n",
+    "print(np.exp(tpde_result.value[2:]))\n",
+    "plot_output_fit(test_vals, tpde_output, tpde_process, n_times)"
    ]
   },
   {
@@ -233,12 +265,11 @@
     "def obj_func(parameters):\n",
     "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=jittered_vals)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
-    "ng_result = optimizer.minimize(obj_func)\n",
-    "jittered_result, process_vals = model_func(ng_result.value[0], ng_result.value[1], ng_result.value[2:], 1e2, 1.0, len(test_vals))\n",
-    "optimised, suscept, r_t = jittered_result\n",
+    "jitter_result = optimizer.minimize(obj_func)\n",
+    "jitter_output, process_vals = model_func(jitter_result.value[0], jitter_result.value[1], jitter_result.value[2:], 1e2, 1.0, len(test_vals))\n",
     "print(test_process)\n",
-    "print(np.exp(ng_result.value[2:]))\n",
-    "plot_output_fit(jittered_vals, jittered_result, process_vals, n_times)"
+    "print(np.exp(jitter_result.value[2:]))\n",
+    "plot_output_fit(jittered_vals, jitter_output, process_vals, n_times)"
    ]
   }
  ],
@@ -258,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
