Rename calibration function

--- a/semimech/07optimise-test-data.ipynb
+++ b/semimech/07optimise-test-data.ipynb
@@ -48,7 +48,7 @@
     "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
-    "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
     "    \"\"\"Additionally include the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
@@ -104,7 +104,7 @@
     "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
     "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
     "param_bounds = [[0.1, 10.0]] + [[0.1, 4.0]] + [[np.log(1.0), np.log(5.0)]] * 4\n",
-    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: all_param_calib_func(x, p, s, t, d), param_bounds)\n",
+    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
     "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
     "print(test_process)\n",
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "def obj_func(parameters):\n",
-    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "    return calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
     "ngopt_result = optimizer.minimize(obj_func)\n",
     "ngopt_output, ngopt_process = model_func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], 1e2, 1.0, len(test_vals))\n",
@@ -181,7 +181,7 @@
     "jitter = pd.Series(np.random.normal(scale=spread, size=n_times) + 1.0)\n",
     "jittered_vals = test_vals * jitter\n",
     "def obj_func(parameters):\n",
-    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=jittered_vals)\n",
+    "    return calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=jittered_vals)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
     "jitter_result = optimizer.minimize(obj_func)\n",
     "jitter_output, process_vals = model_func(jitter_result.value[0], jitter_result.value[1], jitter_result.value[2:], 1e2, 1.0, len(test_vals))\n",
