Move .py files to their own directory

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -49,7 +49,7 @@
     "import pandas as pd\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
-    "from distributions import get_gamma_params_from_mean_sd"
+    "from emu_renewal.distributions import get_gamma_params_from_mean_sd"
    ]
   },
   {
