--- a/semimech/07optimise-test-data.ipynb
+++ b/semimech/07optimise-test-data.ipynb
@@ -23,10 +23,10 @@
     "from scipy.optimize import minimize, shgo\n",
     "import nevergrad as ng\n",
     "\n",
-    "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from process import get_interp_vals_over_model_time\n",
-    "from renew import renew_basic\n",
-    "from outputs import Outputs, plot_output_fit"
+    "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
+    "from emu_renewal.process import get_interp_vals_over_model_time\n",
+    "from emu_renewal.renew import renew_basic\n",
+    "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
   {
