--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -30,7 +30,7 @@
     "import pandas as pd\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
-    "from distributions import get_gamma_params_from_mean_sd"
+    "from emu_renewal.distributions import get_gamma_params_from_mean_sd"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
