--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -42,10 +42,10 @@
     "import pandas as pd\n",
     "from scipy.optimize import minimize\n",
     "\n",
-    "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from process import get_interp_vals_over_model_time\n",
-    "from renew import renew_trunc_gen\n",
-    "from outputs import Outputs, plot_output_fit"
+    "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
+    "from emu_renewal.process import get_interp_vals_over_model_time\n",
+    "from emu_renewal.renew import renew_trunc_gen\n",
+    "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
