--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d57a58a-c84f-4ccf-8baf-b79c4304176b",
+   "id": "35bd0cc9-6a4b-4b1a-a51a-1a996765ff76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,29 @@
     "ngopt_output, ngopt_process = model_func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], 1e2, 1.0, len(test_vals))\n",
     "print(test_process)\n",
     "print(np.exp(ngopt_result.value[2:]))\n",
+    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d57a58a-c84f-4ccf-8baf-b79c4304176b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=10.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
+    "    return process_calib_func(parameters, gen_time_mean=gen_time_mean, gen_time_sd=gen_time_sd, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=1000)\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Only args, not kwargs\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
+    "print(test_process)\n",
+    "print(ngopt_result[0])\n",
+    "print(ngopt_result[1])\n",
+    "print(np.exp(ngopt_result[2]))\n",
     "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
    ]
   },
@@ -235,6 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def obj_func(parameters):\n",
+    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
     "optimizer = ng.optimizers.TwoPointsDE(parametrization=6, budget=10000)\n",
     "tpde_result = optimizer.minimize(obj_func)\n",
     "tpde_output, tpde_process = model_func(tpde_result.value[0], tpde_result.value[1], tpde_result.value[2:], 1e2, 1.0, len(test_vals))\n",
