Tidy up parameterised optimisation with nevergrad

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "def obj_func(parameters):\n",
     "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func)\n",
     "ngopt_output, ngopt_process = model_func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], 1e2, 1.0, len(test_vals))\n",
     "print(test_process)\n",
@@ -232,13 +232,13 @@
     "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return process_calib_func(parameters, gen_time_mean=gen_time_mean, gen_time_sd=gen_time_sd, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=1000)\n",
+    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]  # Only args, not kwargs\n",
     "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
-    "print(test_process)\n",
     "print(ngopt_result[0])\n",
     "print(ngopt_result[1])\n",
+    "print(test_process)\n",
     "print(np.exp(ngopt_result[2]))\n",
     "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
    ]
