Clean up various optimisations within one notebook (04)

--- a/semimech/04optimise-against-model-data.ipynb
+++ b/semimech/04optimise-against-model-data.ipynb
@@ -5,10 +5,10 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Try out a simple optimisation routine with scipy's `minimize` function\n",
-    "Using the same model as in the previous notebook,\n",
-    "get an arbitrarily chosen (local) optimisation algorithm running.\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
+    "## Test optimisation algorithms against results produced by model with known parameters\n",
+    "Using a similar approach to the preceding notebooks ($\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$),\n",
+    "test various optimisation algorithms using model-created outputs\n",
+    "(so that we know the ideal parameters that the algorithm should be approaching).\n",
     "So that we can start using these various model components in more sophisticated ways,\n",
     "I'll begin writing the code as properly encapsulated functions\n",
     "and tracking a few key model quantities."
@@ -70,15 +70,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d3b4803a-137d-4990-a184-1019ec86879b",
-   "metadata": {},
-   "source": [
-    "### Parameters and targets\n",
-    "Set up some basic parameters and targets"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
@@ -87,17 +78,22 @@
    "source": [
     "n_times = 40\n",
     "infectious_seed = 1.0\n",
-    "population = 100.0\n",
-    "dummy_data = pd.Series(\n",
-    "    {\n",
-    "        5: 1.0,\n",
-    "        10: 1.0,\n",
-    "        15: 1.5,\n",
-    "        25: 4.2,\n",
-    "        30: 3.8,\n",
-    "        35: 2.1,\n",
-    "    },\n",
-    ")"
+    "population = 100.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df78149a-a282-4a1f-9933-c7156edc3f83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_times = pd.Series(range(n_times))\n",
+    "test_gen_mean = 5.5\n",
+    "test_gen_sd = 1.8\n",
+    "test_process = [1.8, 2.5, 1.6, 0.7]\n",
+    "test_data, _ = model_func(5.5, 1.8, np.log(test_process), population, infectious_seed, n_times)\n",
+    "test_vals = pd.Series(test_data.incidence, index=model_times)"
    ]
   },
   {
@@ -105,8 +101,9 @@
    "id": "26d42533-c135-4c09-a22f-12b64c101fe1",
    "metadata": {},
    "source": [
-    "### Local optimisation with process values only\n",
-    "Optimisation algorithm applied to arbitrary dummy data.\n",
+    "### Local optimisation algorithm\n",
+    "#### Process values optimised only\n",
+    "Local optimisation algorithm.\n",
     "It works for this simple case, but quickly breaks down in many other use cases."
    ]
   },
@@ -118,12 +115,10 @@
    "outputs": [],
    "source": [
     "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
-    "gen_time_mean = 5.5\n",
-    "gen_time_sd = 1.7\n",
-    "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(gen_time_mean, gen_time_sd, population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
+    "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_gen_mean, test_gen_sd, population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(gen_time_mean, gen_time_sd, result.x, population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data, model_result, process_vals, n_times)"
+    "# plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -133,8 +128,9 @@
     "tags": []
    },
    "source": [
-    "### Local optimisation including the generation time-related parameters\n",
-    "As for previous analysis, but including generation time parameters in local optimisation."
+    "#### Generation time parameters included\n",
+    "The same local optimisation algorithm, \n",
+    "but now additionally including generation time parameters in local optimisation."
    ]
   },
   {
@@ -144,11 +140,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_bounds = [[5.0, 6.0]] + [[1.5, 2.0]] + [[-10000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(all_param_calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
+    "param_bounds = [[1.0, 10.0]] + [[1.0, 5.0]] + [[-10000.0, np.log(10.0)]] * 4\n",
+    "result = minimize(all_param_calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data, model_result, process_vals, n_times)"
+    "# plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -156,24 +152,9 @@
    "id": "87d954d5-2437-477e-bd67-35c64981f092",
    "metadata": {},
    "source": [
-    "### Calibrate to outputs produced by model\n",
-    "Check that the optimisation algorithm can recover\n",
-    "the parameters used in generating some arbitrary data.\n",
-    "This actually worked better (closer fit to data)\n",
-    "when using the raw process values rather than their logs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df78149a-a282-4a1f-9933-c7156edc3f83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_times = pd.Series(range(n_times))\n",
-    "test_process = [1.8, 2.5, 1.6, 0.7]\n",
-    "test_data, _ = model_func(5.5, 1.8, np.log(test_process), population, infectious_seed, n_times)\n",
-    "test_vals = pd.Series(test_data.incidence, index=model_times)"
+    "### Global algorithm\n",
+    "Global optimisation with `scipy`'s `shgo` - need to capture arguments through closure due to bug in optimisation function\n",
+    "as per [comment found online](https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function)."
    ]
   },
   {
@@ -183,8 +164,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
-    "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
     "param_bounds = [[0.1, 10.0]] + [[0.1, 4.0]] + [[np.log(1.0), np.log(5.0)]] * 4\n",
     "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: all_param_calib_func(x, p, s, t, d), param_bounds)\n",
     "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
@@ -199,8 +178,9 @@
    "id": "090d2941-b31f-4b2f-a463-72db3a705323",
    "metadata": {},
    "source": [
-    "### Nevergrad optimisation with synthetic data\n",
-    "Use NGOpt to optimise directly to the outputs from the model with known parameters."
+    "### `nevergrad` algorithms\n",
+    "#### `NGOpt` with default settings\n",
+    "`NGOpt` applied without additional user requests."
    ]
   },
   {
@@ -221,6 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77311aa9-f00d-4bd0-ad08-50c801579227",
+   "metadata": {},
+   "source": [
+    "#### `NGOpt` with parameterisation\n",
+    "Specify starting points and bounds for algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1d57a58a-c84f-4ccf-8baf-b79c4304176b",
@@ -234,7 +223,7 @@
     "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
     "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
-    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Only args, not kwargs\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
     "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
     "print(ngopt_result[0])\n",
     "print(ngopt_result[1])\n",
@@ -248,6 +237,7 @@
    "id": "47d4de3b-495c-4d15-99df-c22f9ad70beb",
    "metadata": {},
    "source": [
+    "#### `TwoPointsDE`\n",
     "Doesn't work quite as well with `TwoPointsDE`."
    ]
   },
@@ -258,14 +248,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obj_func(parameters):\n",
-    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
-    "optimizer = ng.optimizers.TwoPointsDE(parametrization=6, budget=10000)\n",
-    "tpde_result = optimizer.minimize(obj_func)\n",
-    "tpde_output, tpde_process = model_func(tpde_result.value[0], tpde_result.value[1], tpde_result.value[2:], 1e2, 1.0, len(test_vals))\n",
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=10.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
+    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "optimizer = ng.optimizers.TwoPointsDE(parametrization=instrum, budget=2000)\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
+    "print(ngopt_result[0])\n",
+    "print(ngopt_result[1])\n",
     "print(test_process)\n",
-    "print(np.exp(tpde_result.value[2:]))\n",
-    "plot_output_fit(test_vals, tpde_output, tpde_process, n_times)"
+    "print(np.exp(ngopt_result[2]))\n",
+    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
    ]
   },
   {
@@ -273,8 +269,8 @@
    "id": "bbf2d766-f91b-4878-80ad-6d4ccb0f248c",
    "metadata": {},
    "source": [
-    "### Nevergrad optimisation with jittered synthetic data\n",
-    "NGOpt against synthetic data with jitter applied."
+    "#### `NGOpt` optimisation with jittered synthetic data\n",
+    "Same as previous best algorithm, but with jitter applied to data."
    ]
   },
   {
@@ -287,13 +283,17 @@
     "spread = 0.2\n",
     "jitter = pd.Series(np.random.normal(scale=spread, size=n_times) + 1.0)\n",
     "jittered_vals = test_vals * jitter\n",
-    "def obj_func(parameters):\n",
-    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=jittered_vals)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
-    "jitter_result = optimizer.minimize(obj_func)\n",
-    "jitter_output, process_vals = model_func(jitter_result.value[0], jitter_result.value[1], jitter_result.value[2:], 1e2, 1.0, len(test_vals))\n",
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=10.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
+    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
+    "jitter_result = optimizer.minimize(obj_func).value[0]\n",
+    "jitter_output, process_vals = model_func(jitter_result[0], jitter_result[1], jitter_result[2], 1e2, 1.0, len(test_vals))\n",
     "print(test_process)\n",
-    "print(np.exp(jitter_result.value[2:]))\n",
+    "print(np.exp(jitter_result[2]))\n",
     "plot_output_fit(jittered_vals, jitter_output, process_vals, n_times)"
    ]
   }
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
