Parameterise optimisation algorithm for real data notebook

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -38,7 +38,7 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.renew import renew_trunc_gen\n",
+    "from emu_renewal.renew import renew_basic\n",
     "from emu_renewal.process import get_interp_vals_over_model_time\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
@@ -50,20 +50,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, gen_times_end: int) -> tuple:\n",
-    "    \"\"\"The other epidemiological aspects of the model.\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
+    "    \"\"\"The common features of the model.\n",
+    "    Get the generation time distribution from the user request,\n",
+    "    linearly interpolate the non-mechanistic process,\n",
+    "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_trunc_gen(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
+    "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "    \"\"\"Get the loss function from the model.\n",
+    "    \"\"\"Additionally include the generation time parameters as parameters,\n",
+    "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, gen_times_end)[0][0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
     "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
    ]
   },
@@ -75,27 +79,13 @@
    "outputs": [],
    "source": [
     "# Model parameters\n",
-    "population = 100.0\n",
-    "infectious_seed = 1.0\n",
+    "population = 33e6\n",
+    "infectious_seed = 100.0\n",
     "n_times = 40\n",
     "max_gen_mean = 10.0\n",
     "max_gen_sd = 4.0\n",
     "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
     "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3927be6f-4704-42ef-8603-c47f38ca6813",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def interpret_params(params):\n",
-    "    gen_mean_str = f'generation time mean: {params[0]}'\n",
-    "    gen_sd_str = f'generation time sd: {params[1]}'\n",
-    "    process_str = 'random process vals: ' + ', '.join([str(i) for i in params[2:]])\n",
-    "    return f'{gen_mean_str} \\n{gen_sd_str} \\n{process_str}'"
    ]
   },
   {
@@ -117,46 +107,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2696ac0f-dd17-4afd-8fcc-6d2ca9322193",
+   "id": "bc7458b1-8c73-4e6d-9358-b9d056276fa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obj_func(parameters):\n",
-    "    return calib_func(parameters, pop=33e6, seed=120.0, n_times=n_times, targets=mys_data)\n",
-    "\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=8, budget=10000)\n",
-    "y = optimizer.minimize(obj_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a51692ee-70b1-4da3-b6a3-9b95944d42e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_result, process_vals = model_func(y.value[0], y.value[1], y.value[2:], 33e6, 120.0, len(mys_data), gen_times_end)\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74882ae0-50ce-457a-99de-d8ebde6933a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(interpret_params(y.value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "871f7512-d589-4907-9f7d-ce869f241f85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(mys_data, model_result, process_vals, n_times)"
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=20.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
+    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=33e6, seed=100.0, n_times=n_times, targets=mys_data)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 33e6, 100.0, len(mys_data))\n",
+    "print(f'generation time mean: {ngopt_result[0]}')\n",
+    "print(f'generation time sd: {ngopt_result[1]}')\n",
+    "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[2:]]))\n",
+    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times)"
    ]
   }
  ],
@@ -176,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
