--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -66,26 +66,9 @@
     "    \"\"\"Additionally include the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
+    "    gen_time_mean, gen_time_sd, cdr, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model parameters\n",
-    "population = 33e6\n",
-    "infectious_seed = 100.0\n",
-    "n_times = 40\n",
-    "max_gen_mean = 10.0\n",
-    "max_gen_sd = 4.0\n",
-    "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
-    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)"
+    "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
    ]
   },
   {
@@ -98,10 +81,19 @@
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
-    "n_times = len(mys_data)\n",
-    "\n",
-    "# Scale up notifications to incidence outside of model\n",
-    "mys_data *= 16"
+    "n_times = len(mys_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed parameters\n",
+    "population = 33e6\n",
+    "infectious_seed = 100.0"
    ]
   },
   {
@@ -111,19 +103,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optimisation\n",
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=20.0)\n",
     "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
     "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=33e6, seed=100.0, n_times=n_times, targets=mys_data)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, parameters):\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param] + list(parameters), pop=population, seed=infectious_seed, n_times=n_times, targets=mys_data[20:])\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
-    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 33e6, 100.0, len(mys_data))\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f2f233-e997-48ed-b02c-1b1ffdcecc72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reporting\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[3], 33e6, 100.0, n_times)\n",
     "print(f'generation time mean: {ngopt_result[0]}')\n",
     "print(f'generation time sd: {ngopt_result[1]}')\n",
-    "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[2:]]))\n",
-    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times)"
+    "print(f'cdr: {ngopt_result[2]}')\n",
+    "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[3:]]))\n",
+    "plot_output_fit(mys_data[20:], ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
    ]
   }
  ],
