--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -19,8 +19,7 @@
     "Possible next steps:\n",
     "- Make the random walk actually a walk\n",
     "- Allow for time step other than one (possibly)\n",
-    "- Distinguish infection time from symptom onset time\n",
-    "- Parameterise the case detection rate"
+    "- Distinguish infection time from symptom onset time"
    ]
   },
   {
@@ -62,11 +61,11 @@
     "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
-    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "def calib_func(parameters: List[float], pop: int, n_times: int, targets: dict) -> float:\n",
     "    \"\"\"Additionally include the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, cdr, *process_req = parameters\n",
+    "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
    ]
@@ -91,9 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixed parameters\n",
-    "population = 33e6\n",
-    "infectious_seed = 100.0"
+    "# Fixed parameter\n",
+    "population = 33e6"
    ]
   },
   {
@@ -107,10 +105,11 @@
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=20.0)\n",
     "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
-    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param] + list(parameters), pop=population, seed=infectious_seed, n_times=n_times, targets=mys_data[20:])\n",
+    "seed_param = ng.p.Scalar(init=1000.0, lower=99.0, upper=20000.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 8, lower=-10.0, upper=10.0)\n",
+    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
+    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:])\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -123,11 +122,12 @@
    "outputs": [],
    "source": [
     "# Reporting\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[3], 33e6, 100.0, n_times)\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times)\n",
     "print(f'generation time mean: {ngopt_result[0]}')\n",
     "print(f'generation time sd: {ngopt_result[1]}')\n",
     "print(f'cdr: {ngopt_result[2]}')\n",
-    "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[3:]]))\n",
+    "print(f'seed: {ngopt_result[3]}')\n",
+    "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[4:]]))\n",
     "plot_output_fit(mys_data[20:], ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
    ]
   }
