--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -37,9 +37,58 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.renew import renew_basic\n",
     "from emu_renewal.process import get_interp_vals_over_model_time\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72625949-8624-409a-a666-3d43e7e7729c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_triangular_func(end_time):\n",
+    "    def triangular_func(time):\n",
+    "        return max(1.0 - time / end_time, 0.0)\n",
+    "    return triangular_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "882f4d94-4767-430b-8e75-b2a67df01bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def renew_basic(\n",
+    "    gen_time_densities: np.array, \n",
+    "    process_vals: np.array, \n",
+    "    pop: float, \n",
+    "    seed: float, \n",
+    "    n_times: int,\n",
+    ") -> Outputs:\n",
+    "    incidence = np.zeros(n_times)\n",
+    "    suscept = np.zeros(n_times)\n",
+    "    r_t = np.zeros(n_times)\n",
+    "    \n",
+    "    start_index = 25\n",
+    "\n",
+    "    incidence[0] = seed\n",
+    "    suscept[0] = pop - seed\n",
+    "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
+    "    \n",
+    "    seed_func = get_triangular_func(start_index)\n",
+    "    \n",
+    "    for t in range(1, n_times):\n",
+    "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
+    "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]\n",
+    "        seeding_component = seed_func(t) * seed\n",
+    "        renewal_component = contribution_by_day.sum() * r_t[t] * (1.0 - seed_func(t))\n",
+    "        incidence[t] = seeding_component + renewal_component\n",
+    "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
+    "        \n",
+    "    return Outputs(incidence, suscept, r_t)"
    ]
   },
   {
@@ -106,7 +155,7 @@
     "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
     "seed_param = ng.p.Scalar(init=1000.0, lower=99.0, upper=20000.0)\n",
-    "process_param = ng.p.Array(init=[0.0] * 8, lower=-10.0, upper=10.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:])\n",
