--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -48,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_triangular_func(end_time):\n",
-    "    def triangular_func(time):\n",
+    "def get_taper_func(end_time):\n",
+    "    def taper_func(time):\n",
     "        return max(1.0 - time / end_time, 0.0)\n",
-    "    return triangular_func"
+    "    return taper_func"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "    suscept[0] = pop - seed\n",
     "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
     "    \n",
-    "    seed_func = get_triangular_func(start_index)\n",
+    "    seed_func = get_taper_func(start_index)\n",
     "    \n",
     "    for t in range(1, n_times):\n",
     "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
