Add cubic spline interpolation option

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -37,7 +37,7 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_interp_vals_over_model_time\n",
+    "from emu_renewal.process import get_interp_vals_over_model_time, get_spline_values_over_model_time\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
@@ -105,7 +105,7 @@
     "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
+    "    process_vals = get_spline_values_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
