--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -5,10 +5,8 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "### Warning, work in progress\n",
-    "Trying to get models to actually fit to real-world\n",
-    "data, with very limited success so far.\n",
-    "Here I am exponentiating the random process values."
+    "### Attempt fitting model to empiric data\n",
+    "Fit models to actually fit to real-world data."
    ]
   },
   {
@@ -48,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_taper_func(end_time):\n",
+    "def get_taper_func(end_time: float) -> callable:\n",
     "    def taper_func(time):\n",
     "        return max(1.0 - time / end_time, 0.0)\n",
     "    return taper_func"
@@ -61,29 +59,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def renew_basic(\n",
+    "def renew_taper_seed(\n",
     "    gen_time_densities: np.array, \n",
     "    process_vals: np.array, \n",
     "    pop: float, \n",
-    "    seed: float, \n",
+    "    seed_peak: float, \n",
     "    n_times: int,\n",
+    "    seed_duration: int,\n",
     ") -> Outputs:\n",
     "    incidence = np.zeros(n_times)\n",
     "    suscept = np.zeros(n_times)\n",
     "    r_t = np.zeros(n_times)\n",
     "    \n",
-    "    start_index = 25\n",
-    "\n",
-    "    incidence[0] = seed\n",
-    "    suscept[0] = pop - seed\n",
+    "    incidence[0] = seed_peak\n",
+    "    suscept[0] = pop - seed_peak\n",
     "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
     "    \n",
-    "    seed_func = get_taper_func(start_index)\n",
+    "    seed_func = get_taper_func(seed_duration)\n",
     "    \n",
     "    for t in range(1, n_times):\n",
     "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
     "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]\n",
-    "        seeding_component = seed_func(t) * seed\n",
+    "        seeding_component = seed_func(t) * seed_peak\n",
     "        renewal_component = contribution_by_day.sum() * r_t[t] * (1.0 - seed_func(t))\n",
     "        incidence[t] = seeding_component + renewal_component\n",
     "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
@@ -98,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, seed_duration: int) -> tuple:\n",
     "    \"\"\"The common features of the model.\n",
     "    Get the generation time distribution from the user request,\n",
     "    linearly interpolate the non-mechanistic process,\n",
@@ -107,15 +104,15 @@
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_spline_values_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
+    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, seed, n_times, seed_duration)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
-    "def calib_func(parameters: List[float], pop: int, n_times: int, targets: dict) -> float:\n",
+    "def calib_func(parameters: List[float], pop: int, n_times: int, targets: dict, seed_duration: int) -> float:\n",
     "    \"\"\"Additionally include the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, seed_duration)[0][0]\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
    ]
   },
@@ -140,7 +137,8 @@
    "outputs": [],
    "source": [
     "# Fixed parameter\n",
-    "population = 33e6"
+    "population = 33e6\n",
+    "seed_duration = 25"
    ]
   },
   {
@@ -151,14 +149,14 @@
    "outputs": [],
    "source": [
     "# Optimisation\n",
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=20.0)\n",
-    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=4.0, lower=2.0, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
-    "seed_param = ng.p.Scalar(init=1000.0, lower=99.0, upper=20000.0)\n",
-    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
+    "seed_param = ng.p.Scalar(init=1000.0, lower=50.0, upper=15000.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * 6, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:])\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:], seed_duration=seed_duration)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -171,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Reporting\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times)\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, seed_duration)\n",
     "print(f'generation time mean: {ngopt_result[0]}')\n",
     "print(f'generation time sd: {ngopt_result[1]}')\n",
     "print(f'cdr: {ngopt_result[2]}')\n",
