--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -136,9 +136,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixed parameter\n",
+    "# Fixed parameters\n",
     "population = 33e6\n",
-    "seed_duration = 25"
+    "seed_duration = 40\n",
+    "n_process_periods = 8"
    ]
   },
   {
@@ -150,14 +151,14 @@
    "source": [
     "# Optimisation\n",
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
-    "gen_time_sd_param = ng.p.Scalar(init=4.0, lower=2.0, upper=8.0)\n",
+    "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
     "seed_param = ng.p.Scalar(init=1000.0, lower=50.0, upper=15000.0)\n",
-    "process_param = ng.p.Array(init=[0.0] * 6, lower=-10.0, upper=10.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:], seed_duration=seed_duration)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=10000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
