--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -31,11 +31,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from scipy.optimize import minimize, shgo\n",
     "import nevergrad as ng\n",
     "\n",
-    "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_interp_vals_over_model_time, get_spline_values_over_model_time\n",
+    "from emu_renewal.distributions import get_gamma_densities_from_params\n",
+    "from emu_renewal.process import get_spline_values_over_model_time\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
@@ -81,7 +80,7 @@
     "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
     "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]\n",
     "        seeding_component = seed_func(t) * seed_peak\n",
-    "        renewal_component = contribution_by_day.sum() * r_t[t] * (1.0 - seed_func(t))\n",
+    "        renewal_component = contribution_by_day.sum() * r_t[t]\n",
     "        incidence[t] = seeding_component + renewal_component\n",
     "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
     "        \n",
@@ -104,7 +103,7 @@
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_spline_values_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, seed, n_times, seed_duration)\n",
+    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, seed_duration)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, targets: dict, seed_duration: int) -> float:\n",
@@ -139,7 +138,7 @@
     "# Fixed parameters\n",
     "population = 33e6\n",
     "seed_duration = 40\n",
-    "n_process_periods = 8"
+    "n_process_periods = 12"
    ]
   },
   {
@@ -153,7 +152,7 @@
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
     "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
-    "seed_param = ng.p.Scalar(init=1000.0, lower=50.0, upper=15000.0)\n",
+    "seed_param = ng.p.Scalar(init=np.log(10000.0), lower=np.log(5000.0), upper=np.log(20000.0))\n",
     "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
