--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -6,18 +6,11 @@
    "metadata": {},
    "source": [
     "### Attempt fitting model to empiric data\n",
-    "Fit models to actually fit to real-world data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "531d8192-1704-4e48-b220-4c43b257b693",
-   "metadata": {},
-   "source": [
+    "Fit models to actually fit to real-world data.\n",
     "Possible next steps:\n",
     "- Make the random walk actually a walk\n",
-    "- Allow for time step other than one (possibly)\n",
-    "- Distinguish infection time from symptom onset time"
+    "- Distinguish infection time from symptom onset time\n",
+    "- Allow for time step other than one (possibly)"
    ]
   },
   {
@@ -64,7 +57,7 @@
     "    pop: float, \n",
     "    seed_peak: float, \n",
     "    n_times: int,\n",
-    "    seed_duration: int,\n",
+    "    run_in: int,\n",
     ") -> Outputs:\n",
     "    incidence = np.zeros(n_times)\n",
     "    suscept = np.zeros(n_times)\n",
@@ -74,7 +67,7 @@
     "    suscept[0] = pop - seed_peak\n",
     "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
     "    \n",
-    "    seed_func = get_taper_func(seed_duration)\n",
+    "    seed_func = get_taper_func(run_in)\n",
     "    \n",
     "    for t in range(1, n_times):\n",
     "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
@@ -94,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, seed_duration: int) -> tuple:\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
     "    \"\"\"The common features of the model.\n",
     "    Get the generation time distribution from the user request,\n",
     "    linearly interpolate the non-mechanistic process,\n",
@@ -103,16 +96,29 @@
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_spline_values_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, seed_duration)\n",
+    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
-    "def calib_func(parameters: List[float], pop: int, n_times: int, targets: dict, seed_duration: int) -> float:\n",
+    "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    \"\"\"Additionally include the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, seed_duration)[0][0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in)[0][0]\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed parameters\n",
+    "population = 33e6\n",
+    "run_in = 30\n",
+    "n_process_periods = 12"
    ]
   },
   {
@@ -125,20 +131,8 @@
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
-    "n_times = len(mys_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fixed parameters\n",
-    "population = 33e6\n",
-    "seed_duration = 40\n",
-    "n_process_periods = 12"
+    "mys_data.index += run_in\n",
+    "n_times = len(mys_data) + run_in"
    ]
   },
   {
@@ -153,10 +147,10 @@
     "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
     "seed_param = ng.p.Scalar(init=np.log(10000.0), lower=np.log(5000.0), upper=np.log(20000.0))\n",
-    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-10.0, upper=10.0)\n",
+    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, targets=mys_data[20:], seed_duration=seed_duration)\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=10000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -169,13 +163,13 @@
    "outputs": [],
    "source": [
     "# Reporting\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, seed_duration)\n",
+    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
     "print(f'generation time mean: {ngopt_result[0]}')\n",
     "print(f'generation time sd: {ngopt_result[1]}')\n",
     "print(f'cdr: {ngopt_result[2]}')\n",
     "print(f'seed: {ngopt_result[3]}')\n",
     "print('random process vals: ' + ', '.join([str(i) for i in ngopt_result[4:]]))\n",
-    "plot_output_fit(mys_data[20:], ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
+    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
    ]
   }
  ],
