--- a/semimech/link_points.ipynb
+++ b/semimech/link_points.ipynb
@@ -18,11 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cos_points_link(x, a, b):\n",
+    "def get_cos_points_link(a, b):\n",
     "    amplitude = b[1] - b[0]\n",
     "    period_adj = np.pi / (a[1] - a[0])\n",
     "    def cos_link(x):\n",
-    "        return (-np.cos((x - a[0]) * period_adj) + 1.0) / 2.0 * amplitude + b[0]"
+    "        return (-np.cos((x - a[0]) * period_adj) + 1.0) / 2.0 * amplitude + b[0]\n",
+    "    return cos_link"
    ]
   },
   {
@@ -35,7 +36,7 @@
     "a = [-1, 4]\n",
     "b = [7, 2]\n",
     "x_vals = np.linspace(a[0], a[1], 100)\n",
-    "y_vals = [get_cos_points_link(i, a, b) for i in x_vals]\n",
+    "y_vals = [get_cos_points_link(a, b)(i) for i in x_vals]\n",
     "pd.Series(y_vals, index=x_vals).plot()"
    ]
   },
@@ -100,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
