Finish piecewise version of cos function

--- a/semimech/link_points.ipynb
+++ b/semimech/link_points.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -18,26 +19,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cos_points_link(a, b):\n",
-    "    amplitude = b[1] - b[0]\n",
-    "    period_adj = np.pi / (a[1] - a[0])\n",
+    "def get_cos_points_link(coords_a, coords_b):\n",
+    "    if coords_a[0] == coords_b[0]:\n",
+    "        raise ValueError('Same x-value for both submitted coordinates')\n",
+    "    period_adj = np.pi / (coords_b[0] - coords_a[0])\n",
+    "    amplitude = coords_b[1] - coords_a[1]\n",
     "    def cos_link(x):\n",
-    "        return (-np.cos((x - a[0]) * period_adj) + 1.0) / 2.0 * amplitude + b[0]\n",
-    "    return cos_link"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6619091b-d5bf-4dda-9afc-10eb56b43113",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [-1, 4]\n",
-    "b = [7, 2]\n",
-    "x_vals = np.linspace(a[0], a[1], 100)\n",
-    "y_vals = [get_cos_points_link(a, b)(i) for i in x_vals]\n",
-    "pd.Series(y_vals, index=x_vals).plot()"
+    "        return (-np.cos((x - coords_a[0]) * period_adj) + 1.0) / 2.0 * amplitude + coords_a[1]\n",
+    "    return cos_link\n",
+    "\n",
+    "def generate_piecewise_cosine(x_vals, y_vals):\n",
+    "    coords = list(zip(x_vals, y_vals))\n",
+    "    def piecewise_cosine_func(x):\n",
+    "        start_cond = x < x_vals[0]\n",
+    "        mid_conds = [x_vals[i] <= x <= x_vals[i + 1] for i in range(len(coords) - 1)]\n",
+    "        end_cond = x > x_vals[-1]\n",
+    "        conds = [start_cond] + mid_conds + [end_cond]\n",
+    "\n",
+    "        start_func = lambda x: y_vals[0]\n",
+    "        mid_funcs = [get_cos_points_link(coords[i], coords[i + 1]) for i in range(len(coords) - 1)]\n",
+    "        end_func = lambda x: y_vals[-1]\n",
+    "        funcs = [start_func] + mid_funcs + [end_func]\n",
+    "        \n",
+    "        return np.piecewise(x, conds, funcs)\n",
+    "    return np.vectorize(piecewise_cosine_func)"
    ]
   },
   {
@@ -47,41 +52,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def get_cos_points_link(x_values, y_values):\n",
-    "    if len(x_values) < 2 or len(y_values) < 2 or len(x_values) != len(y_values):\n",
-    "        raise ValueError(\"Invalid input: x_values and y_values must have at least two elements and be of the same length.\")\n",
-    "    \n",
-    "    def cos_link(x):\n",
-    "        # Calculate the amplitude and period adjustment based on the first two points\n",
-    "        amplitude = y_values[1] - y_values[0]\n",
-    "        period_adj = np.pi / (x_values[1] - x_values[0])\n",
-    "        \n",
-    "        # Calculate the linked points using the cosine function\n",
-    "        return (-np.cos((x - x_values[0]) * period_adj) + 1.0) / 2.0 * amplitude + y_values[0]\n",
-    "    \n",
-    "    return np.vectorize(cos_link)\n",
-    "\n",
-    "# Example data: three points\n",
-    "x_data = np.array([0, 2, 3])\n",
-    "y_data = np.array([1, 4, 2])\n",
-    "\n",
-    "# Obtain the function for linked points\n",
-    "linked_points_func = get_cos_points_link(x_data, y_data)\n",
-    "\n",
-    "# Example: Get y-values for a set of x-values\n",
-    "x_values_example = np.linspace(min(x_data), max(x_data), 100)\n",
-    "y_values_example = linked_points_func(x_values_example)\n",
-    "\n",
-    "# Plot the original data and the linked points\n",
-    "plt.scatter(x_data, y_data, label='Data Points')\n",
-    "plt.plot(x_values_example, y_values_example, label='Linked Cosine Function', color='red')\n",
-    "plt.legend()\n",
-    "plt.xlabel('X')\n",
-    "plt.ylabel('Y')\n",
-    "plt.show()\n"
+    "x_vals = [0, 2, 3]\n",
+    "y_vals = [1, 4, 2]\n",
+    "piecewise_cosine = generate_piecewise_cosine(x_vals, y_vals)\n",
+    "x_values_example = np.linspace(min(x_vals), max(x_vals), 100)\n",
+    "y_values_example = piecewise_cosine(x_values_example)\n",
+    "pd.Series(y_values_example, index=x_values_example).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6619091b-d5bf-4dda-9afc-10eb56b43113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [4, -4]\n",
+    "b = [1, 5]\n",
+    "x_vals = np.linspace(a[0], b[0], 100)\n",
+    "y_vals = [get_cos_points_link(a, b)(i) for i in x_vals]\n",
+    "pd.Series(y_vals, index=x_vals).plot()"
    ]
   }
  ],
