Get cosine curve fitting running in data fitting

--- a/semimech/08trig-process.ipynb
+++ b/semimech/08trig-process.ipynb
@@ -27,7 +27,7 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
-    "from emu_renewal.process import generate_piecewise_cosine\n",
+    "# from emu_renewal.process import generate_piecewise_cosine\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
@@ -75,18 +75,6 @@
     "        \n",
     "        return np.piecewise(x, conds, funcs)\n",
     "    return np.vectorize(piecewise_cosine_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d8f0426-478f-4ba0-ab9b-630a7bb5abeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# func = generate_piecewise_cosine(np.linspace(0.0, n_times, len(ngopt_result[-1])), ngopt_result[-1])\n",
-    "# x_vals = np.linspace(-10.0, n_times + 10.0, 500)\n",
-    "# pd.Series(func(x_vals), index=x_vals).plot()"
    ]
   },
   {
@@ -155,11 +143,8 @@
     "    \n",
     "    func = generate_piecewise_cosine(np.linspace(0.0, n_times, len(process_req)), process_req)\n",
     "    \n",
-    "    x_vals = np.linspace(-10.0, n_times + 10.0, 500)\n",
-    "    \n",
+    "    x_vals = np.array(np.array([float(i) for i in range(n_times)]))\n",
     "    process_vals = func(x_vals)\n",
-    "\n",
-    "    # process_vals = generate_piecewise_cosine(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
     "    return model_result, process_vals_exp\n",
@@ -216,7 +201,7 @@
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=500)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=1000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
@@ -233,7 +218,7 @@
     "print(f'generation time sd: {ngopt_result[1]}')\n",
     "print(f'cdr: {ngopt_result[2]}')\n",
     "print(f'seed: {ngopt_result[3]}')\n",
-    "print('random process vals: ' + ', '.join([str(np.exp(i)) for i in ngopt_result[4:]]))\n",
+    "print('random process vals: ' + ', '.join([str(np.exp(i)) for i in ngopt_result[-1]]))\n",
     "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
    ]
   }
